--- a/Template.html
+++ b/Template.html
@@ -9,6 +9,7 @@
   <script src="FudgeStory/FudgeStory.js"></script>
   <script src="./Build/Template.js"></script>
   <title>Fudge Story Template</title>
+  <splash scr="Source/img/background/laboratory.jpg"></splash>
 </head>
 
 <body>
@@ -16,15 +17,20 @@
     <canvas></canvas>
     <speech>
       <name>
-        <!-- The name of the character speaking</name> -->
-        <content>
-          <!--The text the character says-->
-        </content>
+        <!-- The name of the character speaking-->
+      </name>
+      <content>
+        <!--The text the character says-->
+      </content>
     </speech>
 
     <dialog is="text-page">
       <!-- The content of a page of text for reading -->
     </dialog>
+    <div type="interface">
+      <input name="a" type="text" disabled />
+      <meter name="a" min="0" max="100" disabled />
+    </div>
   </scene>
 </body>
 
