--- a/Template.html
+++ b/Template.html
@@ -9,7 +9,7 @@
   <script src="FudgeStory/FudgeStory.js"></script>
   <script src="./Build/Template.js"></script>
   <title>Fudge Story Template</title>
-  <splash scr="Source/img/background/laboratory.jpg"></splash>
+  <splash scr="Source/img/titlescreen720.png"></splash>
 </head>
 
 <body>
@@ -28,8 +28,8 @@
       <!-- The content of a page of text for reading -->
     </dialog>
     <div type="interface">
-      <input name="a" type="text" disabled />
-      <meter name="a" min="0" max="100" disabled />
+      <input name="a" type="text" disabled hidden />
+      <meter name="a" min="0" max="100" disabled hidden />
     </div>
   </scene>
 </body>
