--- a/Template.html
+++ b/Template.html
@@ -9,7 +9,7 @@
   <script src="FudgeStory/FudgeStory.js"></script>
   <script src="./Build/Template.js"></script>
   <title>Fudge Story Template</title>
-  <splash scr="Source/img/titlescreen720.png"></splash>
+  <splash scr="Source/img/titlescreen720.jpg"></splash>
 </head>
 
 <body>
